src/test/ui/rfc-2005-default-binding-mode/for.stderr
error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/for.rs:6:13
   |
LL |     for (n, mut m) in &tups {
   |          -  ^^^^^ by-move pattern here
   |          |
   |          both by-ref and by-move used

error[E0507]: cannot move out of borrowed content
  --> $DIR/for.rs:6:9
   |
LL |     for (n, mut m) in &tups {
   |         ^^^^-----^
   |         |   |
   |         |   hint: to prevent move, use `ref m` or `ref mut m`
   |         cannot move out of borrowed content

error: aborting due to 2 previous errors

Some errors occurred: E0009, E0507.
For more information about an error, try `rustc --explain E0009`.
